margin missing under card

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="columns">
+<div class="columns" style="margin-bottom: 200px">
   <div class="column newsletter-card">
     <div class="newsletter-header has-text-white">
       <h1>Creating email templates has never been easier.</h1>
